src/scss/block/table.scss
@import "~scss/_vars";

.blocks {
	.block.blockTable { padding: 6px 0px; }
	.block.blockTable {
		.scrollWrap { width: 100%; padding: 4px; line-height: 0px; }
		.scrollWrap.withScroll { overflow: overlay; padding-bottom: 8px; }

		.handleRow, .handleColumn { 
			cursor: grab !important; transition: $transitionFast; z-index: 10; border: 2px solid #fff; border-radius: 3px;
			background-color: $colorOrange; position: absolute; display: none;
		}
		.handleColumn { 
			height: 10px; width: 22px; background-image: url('~img/icon/table/handle/column.svg'); background-size: 16px 8px;
			left: 50%; top: -5px; margin-left: -11px;
		}
		.handleRow {
			height: 22px; width: 10px; background-image: url('~img/icon/table/handle/row.svg'); background-size: 8px 16px; 
			top: 50%; left: -5px; margin-top: -11px;
		}

		.table { display: inline-block; border-collapse: collapse; box-shadow: 0px 1px $colorBorderDark, 1px 0px $colorBorderDark; }

		.table.isClone { border-radius: 4px; border: 2px solid #ffcf6f; box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); };
		.table.isClone {
			.handleColumn { display: block; }
			.cell { box-shadow: 0px 1px inset $colorBorderDark, 1px 0px inset $colorBorderDark; }
		}
		
		.row { display: grid; position: relative; }
		.row.isHighlightedRow {	box-shadow: 0px 0px 0px 2px #ffcf6f; border-radius: 2px; z-index: 2; }
		.row.isHighlightedRow {
			.cell { box-shadow: 1px 0px inset $colorBorderDark; padding-top: 0px; }
			.cell .block .wrapContent { padding-top: 1px; }
		}
		.row.isDraggingRow { box-shadow: 0px 1px $colorBorderDark, 1px 0px $colorBorderDark, 0px 4px 16px rgba(0, 0, 0, 0.2); background: #fff; }

		.cell { 
			@include text-common; vertical-align: top; position: relative; cursor: text; flex-shrink: 0; background: #fff;
			box-shadow: 1px 1px inset $colorBorderDark; padding: 1px 0px 0px 1px;
		}

		.cell.isEditing { box-shadow: 0px 0px 0px 2px #ffcf6f; border-radius: 2px; padding: 0px; }
		.cell.isEditing {
			.block .wrapContent { padding-left: 1px; padding-top: 1px; }
		}

		.cell.isHighlightedColumn {
			box-shadow: 0px 1px inset $colorBorderDark, 2px 0px 0px #ffcf6f, -2px 0px 0px #ffcf6f; z-index: 3;
			padding: 1px 0px 0px 0px;
		}
		.cell.isHighlightedColumn.isFirst {
			box-shadow: 2px 0px 0px #ffcf6f, -2px 0px 0px #ffcf6f, 0px -2px 0px #ffcf6f;
			border-radius: 2px 2px 0px 0px; padding-top: 0px;
		}
		.cell.isHighlightedColumn.isLast {
			box-shadow: 0px 1px inset $colorBorderDark, 2px 0px 0px #ffcf6f, -2px 0px 0px #ffcf6f, 0px 2px 0px #ffcf6f;
			border-radius: 0px 0px 2px 2px;
		}
		.cell.isHighlightedColumn {
			.handleColumn { display: block; }
		}

		.cell.isOver { z-index: 2; }
		.cell.isOver.left { box-shadow: 0px 1px inset $colorBorderDark, -2px 0px 0px #ffcf6f; padding-left: 0px; }
		.cell.isOver.left {
			.block .wrapContent { padding-left: 1px; }
		}
		.cell.isOver.right { box-shadow: 1px 1px inset $colorBorderDark, 2px 0px 0px #ffcf6f; }

		.cell.isEditing {
			.handleRow, .handleColumn { display: block; }
		}

		.cell.isHighlightedCell, .cell:hover {
			.icon.menu { opacity: 1; pointer-events: all; }
		}

		.cell.isHighlightedCell {
			.icon.menu { border-color: #ffcf6f; box-shadow: 0px 0px 0px 2px #ffcf6f; }
		}

		.cell:hover {
			.handleRow, .handleColumn { display: block; }
		}

		.cell.isDraggingColumn { box-shadow: 0px 0px 0px 2px #ffcf6f; border-radius: 2px; padding: 0px; }
		.cell.isDraggingColumn {
			.block .wrapContent { padding-top: 1px; }
		}

		.row.isDraggingRow, .cell.isDraggingColumn { z-index: 10; }
		.row.isDraggingRow, .cell.isDraggingColumn {
			.handleRow, .handleColumn { display: block; }
		}

		.cell.align-h0 .value { text-align: left; }
		.cell.align-h1 .value { text-align: right; }
		.cell.align-h2 .value { text-align: center; }

		.cell.align-v0 { vertical-align: middle; }
		.cell.align-v1 { vertical-align: top; }
		.cell.align-v2 { vertical-align: bottom; }

		.cell {
			.resize { width: 6px; height: 100%; position: absolute; right: -3px; top: 0px; cursor: col-resize; z-index: 2; }
			.click { width: 100%; height: 100%; }

			.block { height: 100%; border: 0px !important; padding: 0px; margin: 0px; }
			.block {
				.selectable { flex-grow: 1; }
				.wrapContent, .wrap, .flex, .dropTarget, #value { height: 100%; }

				.wrapMenu { display: none; }
				.wrapContent { width: 100%; display: flex; flex-direction: column;  }
				.dropTarget { padding: 0px !important; }
				.dropTarget.targetBot { display: none; }

				.markers { padding: 9px 0px 9px 9px; }
				#value, .placeholder  { padding: 9px 9px 9px 0px; }
			}

			.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 14px; }
			.block.blockText.quote > .wrapContent > .additional > .line { height: calc(100% - 18px); top: 9px; }

			.icon.menu { 
				width: 8px; height: 20px; box-shadow: 0px 0px 0px 1px $colorBorderDark; border-radius: 10px; background-image: url('~img/icon/table/handle/cell.svg');
				background-size: 8px 16px; position: absolute; right: 9px; top: 50%; margin-top: -10px; z-index: 2; cursor: pointer; opacity: 0; pointer-events: none;
				background-color: #fff;
			}
			.icon.menu:hover { border-color: #ffcf6f; box-shadow: 0px 0px 0px 2px #ffcf6f; }

			.block.blockText { @include text-common; }
		}
		.cell.isEditing { z-index: 2; }
	}
}

